ingress/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sockshop-ingress
  namespace: sock-shop
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: nginx
  rules:
    - host: sock.jeffreyeres.tech
      http:
        paths:
        - pathType: Prefix
          path: /
          backend: 
            service:
              name: front-end
              port:
                number: 80


    - host: grafana.jeffreyeres.tech
      http:
        paths:
        - pathType: Prefix
          path: /
          backend: 
            service:
              name: prometheus-grafana
              port:
                number: 80

    - host: prometheus.jeffreyeres.tech
      http:
        paths:
        - pathType: Prefix
          path: /
          backend: 
            service:
              name: prometheus-kube-prometheus-prometheus
              port:
                number: 9090       

  tls:
  - hosts:
      - sock.jeffreyeres.tech
      - prometheus.jeffreyeres.tech
      - grafana.jeffreyeres.tech
    secretName: tls-secret
